[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tile Set/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SpikesX5.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MobTurret.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 40, 40 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 31, 0, 0, 65536, 0, 0, 65567, 0, 0, 131072, 0, 0, 131103, 0, 0, 196608, 0, 0, 196639, 0, 0, 262144, 0, 0, 262175, 0, 0, 327680, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 393216, 0, 0, 393236, 0, 0, 393237, 0, 0, 393246, 0, 0, 393247, 0, 0, 458752, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458783, 0, 0, 524288, 0, 0, 524304, 0, 0, 524305, 0, 0, 524319, 0, 0, 589824, 0, 0, 589855, 0, 0, 655360, 0, 0, 655371, 0, 0, 655372, 0, 0, 655391, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720907, 0, 0, 720908, 0, 0, 720927, 0, 0, 786432, 0, 0, 786433, 0, 0, 786443, 0, 0, 786444, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786463, 0, 0, 851968, 0, 0, 851974, 0, 0, 851975, 0, 0, 851979, 0, 0, 851980, 0, 0, 851989, 0, 0, 851990, 0, 0, 851999, 0, 0, 917504, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917535, 0, 0, 983040, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983071, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0 )
_sections_unfolded = [ "Cell", "Collision", "Material", "Visibility" ]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 480, 320 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "collision" ]
GRAVITY = 50.0
WALK_SPEED = 500.0
JUMP_SPEED = 1000.0

[node name="StartPosition" type="Position2D" parent="." index="2"]

position = Vector2( 480, 320 )

[node name="TimeScoreTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="HUD" parent="." index="4" instance=ExtResource( 4 )]

[node name="Spikes" type="Node" parent="." index="5"]

[node name="SpikesX5" parent="Spikes" index="0" instance=ExtResource( 5 )]

position = Vector2( 900, 700 )

[node name="Spawns" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="Spawn1" type="Position2D" parent="Spawns" index="0"]

position = Vector2( 139.802, 420.54 )

[node name="Spawn2" type="Position2D" parent="Spawns" index="1"]

position = Vector2( 700.163, 300.855 )

[node name="Spawn3" type="Position2D" parent="Spawns" index="2"]

position = Vector2( 1130.3, 620.401 )

[node name="Spawn4" type="Position2D" parent="Spawns" index="3"]

position = Vector2( 1059.72, 179.886 )

[node name="Spawn5" type="Position2D" parent="Spawns" index="4"]

position = Vector2( 260.035, 500.551 )

[node name="Spawn6" type="Position2D" parent="Spawns" index="5"]

position = Vector2( 300.962, 260.658 )

[node name="Spawn7" type="Position2D" parent="Spawns" index="6"]

position = Vector2( 680.351, 619.891 )

[node name="Spawn8" type="Position2D" parent="Spawns" index="7"]

position = Vector2( 899.758, 500.558 )

[node name="MobTurret" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 140, 420 )
DETECT_RADIUS = 250

[connection signal="timeout" from="TimeScoreTimer" to="." method="_on_TimeScoreTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="new_game"]


